# podcast-transcript-to-pr

./: README.md  feedback.md  podpr.py  pyproject.toml  responsetmp.md  transcript.txt
